--- a/random-number/k8s/deployment-definition.yml
+++ b/random-number/k8s/deployment-definition.yml
@@ -1,16 +1,29 @@
-apiVersion: v1
-kind: Service
+apiVersion: apps/v1
+
+kind: Deployment
 
 metadata:
-    name: myapp-service
-
-spec:
-    type: NodePort
-    ports:
-        - targetPort: 4000
-          port: 4000
-          nodePort: 30009
-
-    selector:
+    name: myapp-deployment
+    labels:
         app: myapp
         type: backend
+
+spec:
+    template:
+        metadata:
+            name: myapp-pod
+            labels:
+                app: myapp
+                type: backend
+
+        spec:
+            containers:
+                - name: my-backend-container
+                  image: adamtra/random-number
+                  ports:
+                    - containerPort: 4000
+
+    replicas: 3
+    selector:
+        matchLabels:
+            type: backend
