--- a/cluster/k8s/frontend-service-clusterip.yml
+++ b/cluster/k8s/frontend-service-clusterip.yml
@@ -2,15 +2,13 @@ apiVersion: v1
 kind: Service
 
 metadata:
-    name: myapp-service
+    name: my-frontend-service
 
 spec:
-    type: NodePort
+    type: ClusterIP
     ports:
         - targetPort: 80
           port: 80
-          nodePort: 30009
 
     selector:
-        app: mynginx
-        type: nginx
+        type: frontend
